--- a/_columns/The_Big_Picture/zh-cn/2024-10-11.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-11.md
@@ -158,7 +158,8 @@ Will lower energy prices help U.S. consumers this holiday shopping season? NerdW
 当前的 IBD 长期领导者](https://www.investors.com/research/best-stocks-to-buy-now-long-term-stocks-ibd-long-term-leaders-list/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[Get Full Access To IBD Stock Lists And Ratings  
+获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 
