--- a/_columns/Stock_Of_the_Day/2024-10-11.md
+++ b/_columns/Stock_Of_the_Day/2024-10-11.md
@@ -62,7 +62,7 @@ Still, Post said Tesla's event offered "less concrete details and timelines than
 ---
 
 
-**[Market At Highs, Leaders Flashing Buys; If Not Now, When?](https://www.investors.com/market-trend/stock-market-today/dow-jones-sp500-tesla-sell-rule/)**
+**[Bulls Running; Tesla Flashes Sell Signal](https://www.investors.com/market-trend/stock-market-today/dow-jones-sp500-china-stimulus/)**
 
 
 
