--- a/_columns/The_Big_Picture/2024-10-11.md
+++ b/_columns/The_Big_Picture/2024-10-11.md
@@ -130,5 +130,8 @@ Will lower energy prices help U.S. consumers this holiday shopping season? NerdW
 [Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
+[Bulls Running; China Offers New Stimulus](https://www.investors.com/market-trend/stock-market-today/dow-jones-sp500-china-stimulus/)
+
+
 
 
