--- a/_columns/The_Big_Picture/zh-cn/2024-10-11.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-11.md
@@ -162,5 +162,9 @@ Will lower energy prices help U.S. consumers this holiday shopping season? NerdW
 获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
+[Bulls Running; China Offers New Stimulus  
+公牛奔跑;中国提供新的刺激措施](https://www.investors.com/market-trend/stock-market-today/dow-jones-sp500-china-stimulus/)
+
+
 
 
